# emotion-radar

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/examples/: oliver_expected.json
emotion_radar/: __init__.py  __main__.py  analysis.py  apify_client.py  cleanup.py  cli.py  config.py  db.py  evaluator.py  models.py  providers.py  scoring.py  story_flows.py  video.py
tests/: conftest.py  test_analysis.py  test_analyze_file.py  test_analyze_folder.py  test_bank_only.py  test_cleanup.py  test_cli_analyze_link.py  test_cli_feedback.py  test_config.py  test_db.py  test_db_update.py  test_evaluator.py  test_feedback.py  test_providers.py  test_readme_gdown.py  test_safety.py  test_specificity.py  test_story_flows.py  test_two_pass.py  test_video_headers.py
